--- a/MyCar/app/src/main/res/layout/activity_car_info.xml
+++ b/MyCar/app/src/main/res/layout/activity_car_info.xml
@@ -383,4 +383,27 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:progress="60" />
 
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="221dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="48dp"
+        android:backgroundTint="#A39898"
+        android:text="Add distance"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button4" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="221dp"
+        android:layout_height="52dp"
+        android:backgroundTint="#A39898"
+        android:text="More Info"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button6" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
