--- a/MyCar/app/src/main/res/layout/activity_car_info.xml
+++ b/MyCar/app/src/main/res/layout/activity_car_info.xml
@@ -36,8 +36,8 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="88dp"
+        android:layout_height="40dp"
         android:layout_marginStart="44dp"
         android:backgroundTint="#3DBD19"
         android:text="Refill"
@@ -116,8 +116,8 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="88dp"
+        android:layout_height="40dp"
         android:layout_marginStart="24dp"
         android:backgroundTint="#3DBD19"
         android:text="Refill"
@@ -154,8 +154,8 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="88dp"
+        android:layout_height="40dp"
         android:layout_marginStart="56dp"
         android:backgroundTint="#3DBD19"
         android:text="Refill"
@@ -317,8 +317,8 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="88dp"
+        android:layout_height="40dp"
         android:layout_marginStart="80dp"
         android:backgroundTint="#3DBD19"
         android:text="Refill"
@@ -327,8 +327,8 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="88dp"
+        android:layout_height="40dp"
         android:layout_marginStart="24dp"
         android:backgroundTint="#3DBD19"
         android:text="Refill"
@@ -387,11 +387,12 @@
         android:id="@+id/button6"
         android:layout_width="221dp"
         android:layout_height="52dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="28dp"
         android:backgroundTint="#A39898"
-        android:text="Add distance"
+        android:text="New Distance Driven"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4" />
 
@@ -400,9 +401,11 @@
         android:layout_width="221dp"
         android:layout_height="52dp"
         android:backgroundTint="#A39898"
+        android:onClick="goToMoreInfo"
         android:text="More Info"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.511"
+        app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button6" />
 
