--- a/MyCar/app/src/main/res/layout/activity_more_info.xml
+++ b/MyCar/app/src/main/res/layout/activity_more_info.xml
@@ -4,73 +4,77 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@color/dark_gray"
     tools:context=".MoreInfoActivity">
-
-    <ImageView
-        android:id="@+id/__img___breaks_group"
-        android:layout_width="247dp"
-        android:layout_height="143dp"
-        android:layout_marginTop="8dp"
-        android:contentDescription="__img___breaks_group"
-        android:src="@drawable/__img___breaks_group"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/__img___transmission_group" />
-
-    <ImageView
-        android:id="@+id/__img___power_steering_group"
-        android:layout_width="167dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="25dp"
-        android:contentDescription="__img___power_steering_group"
-        android:src="@drawable/__img___power_steering_group"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/__img___engine_coolant_group" />
-
-    <ImageView
-        android:id="@+id/__img___transmission_group"
-        android:layout_width="167dp"
-        android:layout_height="200dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:contentDescription="__img___transmission_group"
-        android:src="@drawable/__img___transmission_group"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/__img___engine_oil" />
-
-    <ImageView
-        android:id="@+id/__img___engine_coolant_group"
-        android:layout_width="167dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:contentDescription="__img___engine_coolant_group"
-        android:src="@drawable/__img___engine_coolant_group"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/__img___engine_oil"
         android:layout_width="167dp"
         android:layout_height="200dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="84dp"
         android:contentDescription="__img___engine_oil"
         android:src="@drawable/__img___engine_oil"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/gradient"
-        android:layout_width="wrap_content"
-        android:layout_height="129dp"
-        android:contentDescription="gradient"
-        android:src="@drawable/gradient"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/__img___breaks_group"
+        android:layout_width="247dp"
+        android:layout_height="143dp"
+        android:layout_marginTop="476dp"
+        android:contentDescription="__img___breaks_group"
+        android:src="@drawable/__img___breaks_group"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/__img___power_steering_group"
+        android:layout_width="167dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="276dp"
+        android:layout_marginEnd="32dp"
+        android:contentDescription="__img___power_steering_group"
+        android:src="@drawable/__img___power_steering_group"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/__img___engine_coolant_group"
+        android:layout_width="167dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="84dp"
+        android:layout_marginEnd="32dp"
+        android:contentDescription="__img___engine_coolant_group"
+        android:src="@drawable/__img___engine_coolant_group"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/__img___transmission_group"
+        android:layout_width="167dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="276dp"
+        android:contentDescription="__img___transmission_group"
+        android:src="@drawable/__img___transmission_group"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/sign_into_your_account2"
+        android:layout_width="201dp"
+        android:layout_height="38dp"
+        android:layout_marginTop="24dp"
+        android:text="Information on Fluids"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
