--- a/MyCar/app/src/main/res/layout/activity_add_distance.xml
+++ b/MyCar/app/src/main/res/layout/activity_add_distance.xml
@@ -104,9 +104,11 @@
     <ImageView
         android:id="@+id/add_disrance_button"
         android:layout_width="243dp"
-        android:layout_height="35dp"
+        android:layout_height="48dp"
         android:layout_marginBottom="92dp"
+        android:clickable="true"
         android:contentDescription="add_disrance_button"
+        android:onClick="goToCarInfo"
         android:src="@drawable/sign_in_button"
         app:layout_constraintBottom_toTopOf="@+id/gradient"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,10 +123,10 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/add_disrance_button"
         app:layout_constraintEnd_toEndOf="@+id/add_disrance_button"
-        app:layout_constraintHorizontal_bias="0.581"
+        app:layout_constraintHorizontal_bias="0.589"
         app:layout_constraintStart_toStartOf="@+id/add_disrance_button"
         app:layout_constraintTop_toTopOf="@+id/add_disrance_button"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.578" />
 
     <ImageView
         android:id="@+id/gradient"
