--- a/MyCar/app/src/main/res/layout/activity_car_info.xml
+++ b/MyCar/app/src/main/res/layout/activity_car_info.xml
@@ -25,7 +25,7 @@
         android:id="@+id/eo"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginStart="76dp"
+        android:layout_marginStart="72dp"
         android:layout_marginTop="200dp"
         android:indeterminateOnly="false"
 
@@ -40,6 +40,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="44dp"
         android:backgroundTint="#3DBD19"
+        android:onClick="refillTf"
         android:text="Refill"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tf" />
@@ -120,6 +121,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="24dp"
         android:backgroundTint="#3DBD19"
+        android:onClick="refillBf"
         android:text="Refill"
         app:layout_constraintStart_toEndOf="@+id/button4"
         app:layout_constraintTop_toBottomOf="@+id/bf" />
@@ -158,6 +160,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="56dp"
         android:backgroundTint="#3DBD19"
+        android:onClick="refillEc"
         android:text="Refill"
         app:layout_constraintStart_toEndOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/ec" />
@@ -321,6 +324,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="80dp"
         android:backgroundTint="#3DBD19"
+        android:onClick="refillEo"
         android:text="Refill"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/eo" />
@@ -331,6 +335,7 @@
         android:layout_height="48dp"
         android:layout_marginStart="24dp"
         android:backgroundTint="#3DBD19"
+        android:onClick="refillPsf"
         android:text="Refill"
         app:layout_constraintStart_toEndOf="@+id/button3"
         app:layout_constraintTop_toBottomOf="@+id/psf" />
